--- a/figure_code/Chapter 23 Exploring Data with Pandas.ipynb
+++ b/figure_code/Chapter 23 Exploring Data with Pandas.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "empirical-steering",
+   "id": "mechanical-montana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "informational-hands",
+   "id": "julian-alaska",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "middle-information",
+   "id": "sunset-cotton",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "amateur-morrison",
+   "id": "played-moisture",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "robust-canon",
+   "id": "constitutional-directory",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "integral-anatomy",
+   "id": "artistic-lafayette",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "combined-treaty",
+   "id": "foreign-charger",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "floral-tolerance",
+   "id": "dedicated-joseph",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "several-happiness",
+   "id": "legislative-chest",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "biological-passenger",
+   "id": "related-skirt",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "greater-defeat",
+   "id": "stuffed-shepherd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "surgical-activity",
+   "id": "russian-warehouse",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "known-booth",
+   "id": "tested-daughter",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "insured-cache",
+   "id": "primary-boutique",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "impaired-sensitivity",
+   "id": "proof-bhutan",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "independent-empty",
+   "id": "considered-mining",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "third-table",
+   "id": "comparable-philippines",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "enclosed-yukon",
+   "id": "useful-muslim",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "constitutional-withdrawal",
+   "id": "excessive-calculation",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "distant-bunch",
+   "id": "derived-mexican",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "infectious-flood",
+   "id": "proved-state",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "supported-gathering",
+   "id": "inclusive-admission",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "broad-region",
+   "id": "extraordinary-damages",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "dated-australian",
+   "id": "changing-duration",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "rental-germany",
+   "id": "pleasant-framework",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "invalid-estate",
+   "id": "pretty-accent",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "restricted-portland",
+   "id": "outdoor-ambassador",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "scenic-rachel",
+   "id": "declared-morgan",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "perceived-nightmare",
+   "id": "trying-audio",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "brief-thomas",
+   "id": "verified-afghanistan",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "developmental-wells",
+   "id": "stable-smart",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "color-operations",
+   "id": "compliant-tucson",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "nutritional-moscow",
+   "id": "single-priority",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "informal-adolescent",
+   "id": "published-surname",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "satisfied-morrison",
+   "id": "commercial-documentation",
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "executed-filling",
+   "id": "everyday-bradford",
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1676,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "joined-speaker",
+   "id": "compatible-representative",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "blessed-geology",
+   "id": "northern-maximum",
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "removed-moral",
+   "id": "brave-ancient",
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "perfect-demand",
+   "id": "operational-meeting",
    "metadata": {},
    "outputs": [
     {
@@ -2061,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "taken-wrapping",
+   "id": "normal-underwear",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "composed-walker",
+   "id": "bigger-arrow",
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2155,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "eleven-authorization",
+   "id": "frank-agriculture",
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "killing-server",
+   "id": "funny-alexander",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2227,7 +2227,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "conscious-rings",
+   "id": "national-ministry",
    "metadata": {},
    "outputs": [
     {
@@ -2351,7 +2351,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "peaceful-disclaimer",
+   "id": "inside-fiber",
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2421,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "affecting-enhancement",
+   "id": "conceptual-bridges",
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2450,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "architectural-broad",
+   "id": "simplified-release",
    "metadata": {},
    "outputs": [
     {
@@ -2471,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "fantastic-crossing",
+   "id": "lesser-intent",
    "metadata": {},
    "outputs": [
     {
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "consecutive-mechanics",
+   "id": "bacterial-camping",
    "metadata": {},
    "outputs": [
     {
@@ -2616,7 +2616,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "short-nomination",
+   "id": "pursuant-sculpture",
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2637,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "clear-insider",
+   "id": "artificial-factor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2647,7 +2647,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "continued-sunset",
+   "id": "metropolitan-worth",
    "metadata": {},
    "outputs": [
     {
@@ -2780,7 +2780,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "aggressive-injection",
+   "id": "european-magnet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "trying-casting",
+   "id": "inappropriate-kingdom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2804,7 +2804,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "tested-astronomy",
+   "id": "restricted-binary",
    "metadata": {},
    "outputs": [
     {
@@ -2947,7 +2947,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "lasting-glucose",
+   "id": "governing-bookmark",
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +2968,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "conventional-beverage",
+   "id": "absolute-intervention",
    "metadata": {},
    "outputs": [
     {
@@ -2998,7 +2998,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "adult-demographic",
+   "id": "amended-discharge",
    "metadata": {},
    "outputs": [
     {
@@ -3053,7 +3053,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "plain-sweet",
+   "id": "catholic-catch",
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3075,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "military-possibility",
+   "id": "pressed-start",
    "metadata": {},
    "outputs": [
     {
@@ -3097,7 +3097,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "biological-harvey",
+   "id": "figured-illustration",
    "metadata": {},
    "outputs": [
     {
@@ -3224,7 +3224,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "floral-neighbor",
+   "id": "employed-coupon",
    "metadata": {
     "scrolled": false
    },
@@ -3253,7 +3253,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "absent-bangladesh",
+   "id": "exterior-string",
    "metadata": {
     "scrolled": true
    },
@@ -3292,7 +3292,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "czech-switzerland",
+   "id": "polyphonic-guarantee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3320,7 +3320,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "residential-color",
+   "id": "fifth-closing",
    "metadata": {},
    "outputs": [
     {
@@ -3362,7 +3362,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "ongoing-appreciation",
+   "id": "ecological-cholesterol",
    "metadata": {},
    "outputs": [
     {
@@ -3407,7 +3407,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "sixth-transsexual",
+   "id": "spoken-crowd",
    "metadata": {},
    "outputs": [
     {
@@ -3433,10 +3433,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "african-cycling",
+   "id": "legendary-tucson",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "indices = np.isfinite(yearly_temps['Mean T'])\n",
+    "model = np.polyfit(list(yearly_temps['Year'][indices]),\n",
+    "                  list(yearly_temps['Mean T'][indices]), 1)\n",
+    "print(r_squared())"
+   ]
   }
  ],
  "metadata": {
